--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+	<title>Ivan</title>
   </head>
   <body>
-
+	<H1>Hello Code school</H1>
+	<UL>
+		<li>Angular</li>
+		<li>React</li>
+	</UL>
   </body>
 </html>
