--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Ivan</title>
   </head>
   <body>
-	<H1>Hello Code school</H1>
+	<H1>Hello, Code School!</H1>
 	<UL>
 		<li>Angular</li>
 		<li>React</li>
